towerdefense: clicking the mouse button will not place tower Sprite objects.