@@ -1,5 +1,6 @@
 package vooga.games.towerdefense;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 
@@ -21,9 +22,14 @@ public class PlayerCursor extends PlayerSprite{
 	}
 	
 	public void buildTower(int x, int y) throws MalformedURLException{
-		URL imageURL = new URL("images/tower.png");
-		Sprite image = new Sprite(ImageUtil.getImage(imageURL), x, y);
-		towerGroup.add(image); 
+		try {
+			File file = new File("src/vooga/games/towerdefense/images/tower.png");
+			URL imageURL = file.toURI().toURL();
+			Sprite image = new Sprite(ImageUtil.getImage(imageURL), x, y);
+			towerGroup.add(image);
+		} catch (MalformedURLException e) {
+			e.printStackTrace();
+		}
 	}
 	
 	public void buildTower() throws MalformedURLException{
